IRtest_out/076_matrix_mul.err
irs/076_matrix_mul.ll:34:29: error: invalid getelementptr indices
  %v38 = getelementptr i32, i32* %v30, i32 0, i32 0
                            ^
1 error generated.
